Fixed Clipping banner image positionioning

--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -1,7 +1,18 @@
-.textOverMedia {
-    height: 100vh;
+.clipBanner {
+
     position: relative;
     overflow: hidden;
+    height: 20vh;
+
+    @include media-breakpoint-up(md) {
+        height: 35vh;
+        margin-bottom:30px;
+    }
+
+    @include media-breakpoint-up(lg) {
+        height: 50vh;
+        margin-bottom:30px;
+    }
 }
 
 .textOverMediaInnerText {
@@ -30,7 +41,7 @@
     bottom: 0;
     left: 0;
     z-index: 5;
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
 }
 .sectionBackground {
     position: absolute;
@@ -43,10 +54,6 @@
     z-index: auto;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     .picture {
-        top: 0;
-        left: 0;
-        right: auto;
-        bottom: auto;
         width: 100%;
         height: 100vh;
         position: fixed;
