--- a/src/components/Picture/picture.scss
+++ b/src/components/Picture/picture.scss
@@ -1,6 +1,8 @@
 .img {
-    width: 100%;
     height: auto;
+    width: 100%;
+    object-fit: cover;
+    display: block;
 }
 .heroImg {
     object-fit: cover;
